@@ -1486,7 +1486,7 @@ class ComponentRequires(policy.Policy):
     C{r.ComponentRequires({I{packagename}: {I{componentname}: I{requiringComponentSet}}})}
     (i.e.  C{r.ComponentRequires({'data': set(('lib',))})} means that in
     all top-level packages (normally just one), only C{:lib} requires
-    C{:data}, whereas by default both C{:lib} and C{:runtime} require C{:lib};
+    C{:data}, whereas by default both C{:lib} and C{:runtime} require C{:data};
     and C{r.ComponentRequires({'foo': {'data': set(('lib',))}})} makes that
     same change, but only for the C{foo} package).  C{ComponentRequires} cannot
     require capability flags; use C{Requires} if you need to specify a
@@ -1498,6 +1498,9 @@ class ComponentRequires(policy.Policy):
             'data': frozenset(('lib', 'runtime')),
             'devellib': frozenset(('devel',)),
             'lib': frozenset(('devel', 'devellib', 'runtime')),
+            # while config is not an automatic component, its meaning
+            # is standardized
+            'config': frozenset(('runtime', 'lib', 'devellib', 'devel')),
         }
         self.overridesMap = {}
 	policy.Policy.__init__(self, *args, **keywords)
